--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="description" content="Karmanta - Bootstrap 3 Responsive Admin Template">
     <meta name="author" content="GeeksLabs">
     <meta name="keyword" content="Karmanta, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
-    <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Login Page 2 | Karmanta - Bootstrap 3 Responsive Admin Template</title>
+    <title>Login Page</title>
 
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +17,6 @@
     <!--external css-->
     <!-- font icon -->
     <link href="css/elegant-icons-style.css" rel="stylesheet" />
-    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <!-- Custom styles -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-responsive.css" rel="stylesheet" />
@@ -34,7 +32,7 @@
 
     <div class="container">
 
-        <form class="login-form" action="index.html">
+        <div class="login-form">
             <div class="login-wrap">
                 <p class="login-img"><i class="icon_lock_alt"></i></p>
                 <div class="input-group">
@@ -45,41 +43,85 @@
                     <span class="input-group-addon"><i class="icon_key_alt"></i></span>
                     <input id="password" type="password" class="form-control" placeholder="Password">
                 </div>
-                <label class="checkbox">
-                <input type="checkbox" value="remember-me"> Remember me
-                <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
-            </label>
-                <button id="btnLogin" class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
-                <button class="btn btn-info btn-lg btn-block" type="submit">Signup</button>
+                <span id="spanNotif" style="color : red;"></span>
+                </label>
             </div>
-        </form>
+            <button id="btnLogin" class="btn btn-info btn-lg btn-block">Login</button>
+        </div>
+
 
     </div>
 
 
-    <!-- javascripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui-1.9.2.custom.min.js"></script>
 
-    <script>
-        var base_url = window.location.origin;
 
-        $("#btnLogin").click(function() {
-            if ($('#username').val() === 'admin') {
-                if ($('#password').val() == 'admin') {
-                    window.location.href = "dashboard.html";
-                    alert("Berhasil Login");
-                } else {
-                    alert("password salah");
-                }
-            } else {
-                alert("username salah");
-            }
 
-        });
-    </script>
 
 </body>
 
 </html>
+
+
+<!-- javascripts -->
+<script src="js/jquery.js"></script>
+<script src="js/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="js/jquery-ui-1.9.2.custom.min.js"></script>
+
+<script type="text/javascript" src="constant.js"></script>
+
+<script>
+    $("#btnLogin").click(function() {
+        processLogin();
+        // if ($('#username').val() === 'admin') {
+        //     if ($('#password').val() == 'admin') {
+        //         window.location.href = "dashboard.html";
+        //         alert("Berhasil Login");
+        //     } else {
+        //         alert("password salah");
+        //     }
+        // } else {
+        //     alert("username salah");
+        // }
+
+    });
+
+    function processLogin() {
+        var username = $('#username').val();
+        var password = $('#password').val();
+
+        $.ajax({
+            type: "POST",
+            url: base_url + "users/login",
+            data: {
+                username: username,
+                password: password
+            },
+            cache: false,
+            success: function(data) {
+                sessionStorage.setItem("id", data.userInfo._id);
+                sessionStorage.setItem("username", data.userInfo.username);
+                sessionStorage.setItem("position", data.userInfo.position);
+
+                if (data.userInfo._id != null) {
+                    window.location.href = "dashboard.html";
+                }
+
+            },
+            error: function(e) {
+                console.log(e)
+                var message = JSON.parse(e.responseText);
+
+                $("#spanNotif").text(message.message)
+            }
+        });
+    }
+
+    function isEmpty(obj) {
+        for (var prop in obj) {
+            if (obj.hasOwnProperty(prop))
+                return false;
+        }
+
+        return true;
+    }
+</script>
