--- a/register_su.html
+++ b/register_su.html
@@ -86,7 +86,7 @@
 
         $.ajax({
             type: "POST",
-            url: base_url + "/users/add_superuser_1",
+            url: base_url + "users/add_superuser_1",
             data: {
                 username: username,
                 password: password,
